Switch opencv-stitching-jlink back to Apache Maven JLink Plugin (pull #55)