@@ -2,7 +2,8 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.bytedeco</groupId>
     <artifactId>opencv-stitching-jlink</artifactId>
-    <version>1.5.4</version>
+    <version>1.5.5</version>
+    <packaging>jlink</packaging>
     <properties>
         <outputModule>org.bytedeco.samples.stitching</outputModule>
         <exec.mainClass>org.bytedeco.samples.Stitching</exec.mainClass>
@@ -13,81 +14,34 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>opencv-platform</artifactId>
-            <version>4.4.0-1.5.4</version>
+            <version>4.5.1-1.5.5</version>
         </dependency>
     </dependencies>
 
-    <repositories>
-        <repository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>sonatype-nexus-snapshots</id>
-            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
-        </pluginRepository>
-    </pluginRepositories>
-
     <build>
-        <outputDirectory>${project.build.directory}/classes/${outputModule}</outputDirectory>
         <plugins>
-            <!-- This plugin defines the javacpp.platform.module
-                 property used in the module-info template. -->
-            <plugin>
-                <groupId>org.bytedeco</groupId>
-                <artifactId>javacpp</artifactId>
-                <version>1.5.4</version>
-                <executions>
-                    <execution>
-                        <id>javacpp-validate</id>
-                        <phase>validate</phase>
-                        <goals>
-                          <goal>build</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>templating-maven-plugin</artifactId>
-                <version>1.0.0</version>
-                <executions>
-                    <execution>
-                        <id>filter-src</id>
-                        <goals>
-                            <goal>filter-sources</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.0</version>
                 <configuration>
-                    <source>9</source>
-                    <target>9</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.4</version>
-                <executions>
-                    <execution>
-                    <id>jlink</id>
-                    <phase>package</phase>
-                    <goals>
-                        <goal>jlink</goal>
-                    </goals>
-                    <configuration>
-                        <jmodsPath>${java.home}/jmods</jmodsPath>
-                        <mainClass>${outputModule}/${exec.mainClass}</mainClass>
-                        <launcher>stitch</launcher>
-                    </configuration>
-                    </execution>
-                </executions>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jlink-plugin</artifactId>
+                <version>3.1.0</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <stripDebug>true</stripDebug>
+                    <noManPages>true</noManPages>
+                    <noHeaderFiles>true</noHeaderFiles>
+                    <addOptions>
+                        <addOption>--add-modules=ALL-SYSTEM</addOption>
+                    </addOptions>
+                    <launcher>stitch=${outputModule}/${exec.mainClass}</launcher>
+                </configuration>
             </plugin>
         </plugins>
     </build>
